stretch input form technically works but is still a little buggy.

--- a/react-github-user-card/src/App.css
+++ b/react-github-user-card/src/App.css
@@ -166,7 +166,7 @@ a {
   align-items: center;
   justify-content: center;
   margin: 0 auto;
-  max-width: 1200px;
+  max-width: 900px;
 }
 
 .githubLogo {
